# mentat

./: Cargo.toml  README.md  build_logins_api.sh  sqlcipher.md
db/: Cargo.toml  build.rs
db/src/: bootstrap.rs  cache.rs  db.rs  errors.rs  internal_types.rs  lib.rs  metadata.rs  schema.rs  tx.rs  upsert_resolution.rs
ffi/src/: lib.rs
query-algebrizer/: Cargo.toml
query-algebrizer/src/: errors.rs  lib.rs  validate.rs
query-algebrizer/src/clauses/: not.rs  predicate.rs
query-algebrizer/tests/: ground.rs  predicate.rs
query-algebrizer/tests/utils/: mod.rs
query-projector/: Cargo.toml
query-projector/src/: aggregates.rs
query-projector/tests/: aggregates.rs
query-pull/: Cargo.toml
query-pull/src/: errors.rs
query-sql/src/: lib.rs
query-translator/: Cargo.toml
sdks/android/Mentat/samples/basic/: build.gradle
sdks/android/Mentat/samples/basic/src/main/java/org/mozilla/samples/basic/: MainActivity.kt
sql/src/: lib.rs
src/: conn.rs  entity_builder.rs  lib.rs  query.rs  query_builder.rs
sync15/logins/ffi/: Cargo.toml
sync15/logins/ffi/src/: lib.rs
tests/: query.rs
tools/cli/: Cargo.toml
tools/cli/src/mentat_cli/: command_parser.rs  lib.rs  repl.rs
