[package]
name = "mentat_query_algebrizer"
version = "0.0.1"
workspace = ".."

[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"

[dependencies.mentat_core]
path = "../core"

[dependencies.mentat_query]
path = "../query"

# Only for tests.
[dev-dependencies.mentat_query_parser]
path = "../query-parser"

[dev-dependencies]
itertools = "0.7"
maplit = "0.1"
