[package]
name = "loginsapi_ffi"
version = "0.1.0"
authors = ["Mark Hammond <mhammond@skippinet.com.au>"]

[lib]
name = "loginsapi_ffi"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
serde_json = "1.0"
chrono = "0.4"

[dependencies.ffi-toolkit]
#path="../../../../ffi-toolkit"
git = "https://github.com/mozilla/ffi-toolkit.git"
branch = "master"

[dependencies.mentat_sync15_logins]
path = ".."